<resources>
    <string name="app_name">SIH App</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Navigation tabs -->
    <string name="nav_announcement">Announcements</string>
    <string name="nav_home">Home</string>
    <string name="nav_meetings">Meetings</string>
    <string name="nav_meal">Meals</string>
    <string name="nav_funds">Funds</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_school">School</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment_announcement">Recent Announcements</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meetings_pop">MeetingsPop</string>
    <string-array name="year">
        <item>Select Year</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
    </string-array>

    <string name="login_toolbar_title">SIH App</string>
    <string name="action_sign_in_short">Member Sign In</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_username">Member ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_new_email">new Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="sdp">Agenda</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="sought">Sought</string>
    <string name="received">Received</string>
    <string name="description_fund">Description (Used):</string>
    <string name="tasks">Tasks</string>
    <string name="implementation">Implementation</string>
    <string name="school_about">About School</string>
    <string name="fund_pop_title">Use of fund</string>
    <string name="task_detail">Task Details</string>
    <string name="announcement">Announcement</string>
    <string name="nav_head">Navigation Header</string>
    <string name="meeting_status">Status</string>
    <string name="used_fund">Fund Used: </string>
    <string name="fund_received">Received </string>
    <string name="fund_sought">Sought </string>
    <string name="given_to">Given To</string>
    <string name="deadline">Deadline</string>
    <string name="title_activity_member_login">Sign in</string>
    <string name="suggestions">Suggestions</string>
<<<<<<< HEAD
    <string name="meal">Midday meal</string>
    <string name="meal_allocated">Allocated Fund</string>
    <string name="meal_used">Fund Used</string>
    <string name="number_of_children">Number of Children</string>
=======
    <string name="click_image">Click Image</string>
>>>>>>> 3e49a4fa5ea5e6dd8faa4329b96080e904b4f5ee

</resources>
