<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abhisheikh.sihapp.addActivities.AddMeeting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:hint="@string/date"
                android:focusable="false"/>
            <EditText
                android:id="@+id/sdpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sdp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <EditText
                android:id="@+id/statusEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_status"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <ImageView
                android:src="@drawable/school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:id="@+id/Imageprev"/>
            <Button
                android:id="@+id/cpic"
                android:text="@string/click_image"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"/>
            <Button
                android:id="@+id/addMeetingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccent"
                android:text="@string/add"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
