<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abhisheikh.sihapp.addActivities.AddSuggestion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/addSuggestionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suggestions"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <Button
                android:id="@+id/addSuggestionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccent"
                android:text="@string/add"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
